force-app/main/default/objects/ValidZipCode__c/ValidZipCode__c.object-meta.xml
<CustomObject>
    <description>Zip Codes and their Corresponding TDSPs</description>
    <label>Zip Code</label>
    <nameField>
        <label>ValidZipCode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>