force-app/main/default/objects/ValidZipCode__c/fields/Served_by_TrueCost__c.field-meta.xml
<CustomField>
    <fullName>Served_by_TrueCost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This zip code is served by TrueCost</description>
    <inlineHelpText>This zip code is served by TrueCost</inlineHelpText>
    <label>Served by TrueCost</label>
    <type>Checkbox</type>
</CustomField>