force-app/main/default/objects/ValidZipCode__c/fields/TDSP2__c.field-meta.xml
<CustomField>
    <fullName>TDSP2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TDSP Lookup 2</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Zip Codes (TDSP 2)</relationshipLabel>
    <relationshipName>Zip_Codes2</relationshipName>
    <type>Lookup</type>
</CustomField>