force-app/main/default/objects/ValidZipCode__c/fields/TDSP__c.field-meta.xml
<CustomField>
    <fullName>TDSP__c</fullName>
    <label>TDSP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CenterPoint Energy</fullName>
                <default>true</default>
                <label>CenterPoint Energy</label>
            </value>
            <value>
                <fullName>Oncor</fullName>
            </value>
            <value>
                <fullName>TNMP</fullName>
            </value>
            <value>
                <fullName>AEPC</fullName>
            </value>
            <value>
                <fullName>AEPN</fullName>
            </value>
            <value>
                <fullName>Sharyland</fullName>
            </value>
            <value>
                <fullName>Nueces</fullName>
            </value>
            <value>
                <fullName>Sharyland McAllen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>