force-app/main/default/objects/ValidZipCode__c/fields/TDSP_Lookup__c.field-meta.xml
<CustomField>
    <fullName>TDSP_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TDSP Lookup</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Zip Codes</relationshipLabel>
    <relationshipName>Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>