force-app/main/default/objects/ValidZipCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TDSP__c</columns>
    <columns>Served_by_TrueCost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>