force-app/main/default/objects/ValidZipCode__c/listViews/NotServed.listView-meta.xml
<ListView>
    <fullName>NotServed</fullName>
    <columns>NAME</columns>
    <columns>Served_by_TrueCost__c</columns>
    <columns>TDSP_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Served_by_TrueCost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not Served</label>
    <language>en_US</language>
</ListView>