force-app/main/default/objects/ValidZipCode__c/listViews/Sharyland.listView-meta.xml
<ListView>
    <fullName>Sharyland</fullName>
    <columns>NAME</columns>
    <columns>Served_by_TrueCost__c</columns>
    <columns>TDSP_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TDSP_Lookup__c</field>
        <operation>contains</operation>
        <value>shary</value>
    </filters>
    <label>Sharyland</label>
    <language>en_US</language>
</ListView>